--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,11 @@
-<section class="signup-form">
-  <form fxLayout="column" fxLayoutAlign="center center" #f="ngForm" (ngSubmit)="onSubmit(f)">
+<section class="signup">
+  <form
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    #f="ngForm"
+    (ngSubmit)="onSubmit(f)"
+    class="signup-form"
+  >
     <mat-form-field>
       <input
         type="email"
@@ -34,6 +40,20 @@
         Should be at least 6 characters long.
       </mat-error>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary">Submit</button>
+    <mat-form-field >
+      <input matInput placeholder="Your birthday" [matDatepicker]="picker" [max]="maxDate" ngModel name="birthdate">
+      <mat-datepicker #picker></mat-datepicker>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    </mat-form-field>
+    <mat-checkbox
+      ngModel
+      name="agree"
+      required
+      color="primary"
+      class="signup-form__checkbox"
+    >
+      I agree with Terms and Conditions.
+    </mat-checkbox>
+    <button type="submit" [disabled]="f.invalid" mat-raised-button color="primary">Submit</button>
   </form>
 </section>
