--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -1,3 +1,10 @@
-mat-form-field {
-  width: 300px;
+.signup {
+  &-form {
+    mat-form-field {
+      width: 300px;
+    }
+    &__checkbox {
+      margin-bottom: 6px;
+    }
+  }
 }
