side-nav component added

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -9,7 +9,8 @@
     <mat-form-field>
       <input
         type="email"
-        ngModel matInput
+        ngModel
+        matInput
         placeholder="Your email"
         name="email"
         required
