--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,24 @@
-<p>new-training works!</p>
+<section class="new-training" fxLayoutAlign="center">
+  <mat-card fxFlex.xs="90%" fxFlex="400px">
+    <mat-card-title>Time to start a workout!</mat-card-title>
+    <mat-card-content>
+      <mat-form-field appearance="fill">
+        <mat-label>Favorite food</mat-label>
+        <mat-select>
+          <mat-option value="Chinazes">
+            Chinazes
+          </mat-option>
+          <mat-option value="Chinazes2">
+            Chinazes2
+          </mat-option>
+          <mat-option value="Chinazes3">
+            Chinazes3
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="onStartTraining()">Start</button>
+    </mat-card-actions>
+  </mat-card>
+</section>
