--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -8,7 +8,7 @@
       <li *ngIf="!isAuthorized" class="nav-item"><a routerLink="/signup">Signup</a></li>
       <li *ngIf="!isAuthorized" class="nav-item"><a routerLink="/login">Login</a></li>
       <li *ngIf="isAuthorized" class="nav-item"><a routerLink="/training">Training</a></li>
-      <li *ngIf="isAuthorized" class="nav-item"><a>Logout</a></li>
+      <li *ngIf="isAuthorized" (click)="onLogout()" class="nav-item"><a>Logout</a></li>
     </ul>
   </nav>
 </mat-toolbar>
