save and fetch finished trainings to db done

--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -22,7 +22,7 @@
 
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-    <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.date | firestoreDate}} </td>
   </ng-container>
 
   <ng-container matColumnDef="state">
