--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -55,6 +55,9 @@
     >
       I agree with Terms and Conditions.
     </mat-checkbox>
-    <button type="submit" [disabled]="f.invalid" mat-raised-button color="primary">Submit</button>
+    <button *ngIf="!showLoader; else spinner" type="submit" [disabled]="f.invalid" mat-raised-button color="primary">Submit</button>
+    <ng-template #spinner>
+      <mat-spinner></mat-spinner>
+    </ng-template>
   </form>
 </section>
