--- a/src/app/auth/signup-page/signup.component.html
+++ b/src/app/auth/signup-page/signup.component.html
@@ -55,7 +55,7 @@
     >
       I agree with Terms and Conditions.
     </mat-checkbox>
-    <button *ngIf="!showLoader; else spinner" type="submit" [disabled]="f.invalid" mat-raised-button color="primary">Submit</button>
+    <button *ngIf="!(isLoading$ | async); else spinner" type="submit" [disabled]="f.invalid" mat-raised-button color="primary">Submit</button>
     <ng-template #spinner>
       <mat-spinner></mat-spinner>
     </ng-template>
