--- a/src/app/shared/components/navigation/header/header.component.html
+++ b/src/app/shared/components/navigation/header/header.component.html
@@ -5,10 +5,10 @@
   <div><a routerLink="/">LOGO</a></div>
   <nav class="header__nav" fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul class="header__nav__items" fxLayout fxLayoutGap="12px">
-      <li *ngIf="!isAuthorized" class="nav-item"><a routerLink="/signup">Signup</a></li>
-      <li *ngIf="!isAuthorized" class="nav-item"><a routerLink="/login">Login</a></li>
-      <li *ngIf="isAuthorized" class="nav-item"><a routerLink="/training">Training</a></li>
-      <li *ngIf="isAuthorized" (click)="onLogout()" class="nav-item"><a>Logout</a></li>
+      <li *ngIf="!(isAuthenticated$ | async)" class="nav-item"><a routerLink="/signup">Signup</a></li>
+      <li *ngIf="!(isAuthenticated$ | async)" class="nav-item"><a routerLink="/login">Login</a></li>
+      <li *ngIf="isAuthenticated$ | async" class="nav-item"><a routerLink="/training">Training</a></li>
+      <li *ngIf="isAuthenticated$ | async" (click)="onLogout()" class="nav-item"><a>Logout</a></li>
     </ul>
   </nav>
 </mat-toolbar>
