--- a/src/app/shared/components/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/shared/components/navigation/sidenav-list/sidenav-list.component.html
@@ -1,13 +1,23 @@
 <mat-nav-list class="sidebar__nav">
-  <a *ngIf="!(isAuthenticated$ | async)" mat-list-item routerLink="/signup" class="sidebar__nav__item" (click)="onClose()">
+  <a *ngIf="!(isAuthenticated$ | async)"
+     mat-list-item routerLink="/signup"
+     class="sidebar__nav__item"
+     (click)="onClose()"
+  >
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Signup</span>
   </a>
-  <a *ngIf="!(isAuthenticated$ | async)" mat-list-item routerLink="/login" class="sidebar__nav__item" (click)="onClose()">
+  <a *ngIf="!(isAuthenticated$ | async)"
+     mat-list-item routerLink="/login"
+     class="sidebar__nav__item" (click)="onClose()"
+  >
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <a *ngIf="isAuthenticated$ | async" mat-list-item routerLink="/training" class="sidebar__nav__item" (click)="onClose()">
+  <a *ngIf="isAuthenticated$ | async"
+     mat-list-item routerLink="/training"
+     class="sidebar__nav__item" (click)="onClose()"
+  >
     <mat-icon>fitness_center</mat-icon>
     <span class="nav-caption">Training</span>
   </a>
