--- a/src/app/training/trainings-page/training.component.html
+++ b/src/app/training/trainings-page/training.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group mat-align-tabs="center" *ngIf="!onGoingTraining; else currentTraining">
+<mat-tab-group mat-align-tabs="center" *ngIf="!(isRunningTraining$ | async); else currentTraining">
   <mat-tab label="New Exercise">
     <app-new-training></app-new-training>
   </mat-tab>
